made all the filtering manual / frontend (bad security, more flexibility) cloud fxns cost money (blaze plan ugh) added sign-out functionality

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,14 @@ button:disabled {
   margin: 0 auto;
 }
 
+.sign-out {
+  background: none;
+  border: none;
+  color: white;
+  padding: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 
 
